Corrected the gallery section spacing on the projects page

--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -90,3 +90,7 @@
     }
   }
 }
+
+#hoverable-card-gallery, #standard-card-gallery {
+  margin-bottom: 1rem ;
+}
